# Detection_of_Acoustic_Anomalies

./: .gitignore  CMakeLists.txt  README.md  diagram.json  model_16.tflite  model_32.tflite  model_8.tflite  model_mfcc_mlp.tflite  model_mlp.tflite  model_mlp_int8.tflite  sdkconfig  train_models.py  wokwi.toml
.cache/clangd/index/: _kiss_fft_guts.h.988FAAC0417194AD.idx  activation_utils.h.8F83A4E6AEA1FE38.idx  activations.cc.70650D1AC59A17B1.idx  activations.h.A71E37F5F1C5B212.idx  activations_common.cc.7000914A04CE2A86.idx  add.cc.9D083333F19C8B34.idx  add.h.495ED531D93FB085.idx  add.h.BB2AAA9B95E9273E.idx  add.h.BBAED9453431AB10.idx  add_common.cc.A945ED88C291F052.idx  add_n.cc.18F174771B0DD6C1.idx  add_n.h.D4F7D9AC4F079F50.idx  allocator.h.BAC23273AB9532C1.idx  arg_min_max.cc.DFB96E62440ABC20.idx  arg_min_max.h.BE2DCD5FB796950B.idx  array.h.F035F31415964DC1.idx  assign_variable.cc.090C98CAA4475050.idx  base.h.6C6041524CB29619.idx  batch_matmul.cc.4E53010F605C46D5.idx  batch_matmul.h.44160BD742C261F8.idx  batch_matmul.h.B851142E0E2C0075.idx  batch_matmul_common.cc.4085B0549B2A0097.idx  batch_to_space_nd.cc.C51F6509B7A3E007.idx  batch_to_space_nd.h.A0C8F8A0822FA9FC.idx  binary_function.h.D280C74A6FDE9471.idx  broadcast_args.cc.FBEAB5008752D9E0.idx  broadcast_args.h.BA4624114D2C9E61.idx  (+468 more)
components/espressif__esp-tflite-micro/: CMakeLists.txt
main/: CMakeLists.txt  feature_scaler.h  main_functions.cc  mfcc.cc  mfcc.h  microphone.cc  microphone.h  model_data.cc  model_data_16.cc  model_data_32.cc  model_data_8.cc  output_handler.h  test_data.h
(+2 files in other folders)
